[aliases]
test=pytest

[tool:pytest]
addopts = --cov volue_insight_timeseries
python_files = unittest/*.py

[metadata]
name = volue-insight-timeseries
project_urls =
    Homepage = https://volueinsight.com/
    Documentation = https://docs.volue.com/data-and-forecasts/volue-insight-timeseries/
    Source = https://github.com/Volue-Public/volue-insight-timeseries
    Issues = https://github.com/Volue-Public/volue-insight-timeseries/issues
